fix: 修复 GitHub Actions 部署流程
- 修正 distribution-channel 参数传递错误
- 改进文件匹配逻辑，支持动态文件发现
- 添加调试信息以便排查构建产物问题
- 确保即使文件名不匹配也能正常发布

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,5 +66,5 @@ jobs:
       - compile-and-test
     uses: ./.github/workflows/deploy.yml
     with:
-      distribution-channel: ${{ inputs.renderer-template }}
+      distribution-channel: ${{ inputs.distribution-channel }}
       app-version: ${{ needs.prepare.outputs.APP_FULL_VERSION }}
