fix: 简化 deploy.yml 避免 YAML 语法错误
- 移除复杂的多行字符串
- 使用简单的单行发布说明
- 确保 YAML 语法完全正确

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,31 +69,10 @@ jobs:
           echo "Final files to upload: $FILES_TO_UPLOAD"
 
           if [ -n "$FILES_TO_UPLOAD" ]; then
-            # Create release notes
-            RELEASE_NOTES="🚀 **Electron RPA 自动发布**
-
-📦 **包含文件:**
-$(echo "$FILES_TO_UPLOAD" | tr ' ' '\n' | sed 's/.*\//- /')
-
-🔧 **构建信息:**
-- Commit: ${{github.sha}}
-- 构建时间: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
-- 分发渠道: ${{inputs.distribution-channel}}
-
-💾 **支持平台:**
-- Windows (x64)
-- macOS (ARM64)
-- Linux (x64)
-
-📥 **安装说明:**
-1. 下载对应平台的安装包
-2. 运行安装程序
-3. 应用支持自动更新"
-
             gh release create v${{inputs.app-version}} $FILES_TO_UPLOAD \
               --repo ${{github.repository}} \
               --title "Electron RPA v${{inputs.app-version}}" \
-              --notes "$RELEASE_NOTES"
+              --notes "🚀 Electron RPA 自动发布 - 构建于 $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
           else
             echo "❌ No installer files found to upload"
             exit 1
